Test update servers 5

--- a/profile.html
+++ b/profile.html
@@ -222,7 +222,7 @@
     </div>
 
     <!-- Заголовок "Добро пожаловать, пользователь (username)" -->
-    <h1 class="profile-heading theme-text">Welcome, valeyevboss!</h1>
+    <h1 class="profile-heading theme-text">Welcome, тут юзернейм</h1>
 
     <div class="profile-container">
         <!-- Правая колонка блок с аватаркой -->
@@ -234,7 +234,7 @@
                     <input type="file" accept="image/*" id="avatar-upload" style="display: none;">
                 </div>
                 <div class="user-fullname-wrapper">
-                    <div class="user-fullname theme-text">Nikita Valeyev</div>
+                    <div class="user-fullname theme-text">тут надо First Name Last name одной строкой</div>
                     <div class="tooltip-status-wrapper">
                         <img src="assets/icons/status/verified.gif" alt="Verified" class="user-status-icon" />
                         <div class="tooltip-status">
@@ -252,13 +252,13 @@
 
                 <div class="info-row">
                     <img src="assets/icons/id-badge.svg" class="info-icon theme-icon" alt="ID">
-                    <span class="label-id theme-text">ID: 230748936</span>
+                    <span class="label-id theme-text">ID: отображаем тут айди</span>
                 </div>
 
                 <div class="info-row">
                     <img src="assets/icons/user.svg" class="info-icon theme-icon" alt="Username">
                     <span class="label-username theme-text" data-i18n="profile.usernameLabel2">Username:
-                        valeyevboss</span>
+                        тут юзернейм</span>
                 </div>
             </div>
 
@@ -267,11 +267,11 @@
                 <div class="data-title .gray-text">You details</div>
                 <div class="data-item theme-text">
                     <img src="assets/icons/country.svg" class="data-icon theme-icon" alt="Country">
-                    <span class="label-country theme-text" data-i18n="profile.countryLabel">Country:</span>Ukraine
+                    <span class="label-country theme-text" data-i18n="profile.countryLabel">Country:</span>страна
                 </div>
                 <div class="data-item theme-text">
                     <img src="assets\icons\birthday.svg" class="data-icon theme-icon" alt="Birthday">
-                    <span class="label-birthday theme-text" data-i18n="profile.birthdayLabel">Birthday:</span>30.01.2003
+                    <span class="label-birthday theme-text" data-i18n="profile.birthdayLabel">Birthday:</span>дата рождения
                 </div>
             </div>
         </div>
