--- a/profile.html
+++ b/profile.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ValeyevStudio - About</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/profile.css">
-    <link rel="stylesheet" href="css/menu.css">
-    <link rel="stylesheet" href="css/menu_dropdown.css">
-    <link rel="stylesheet" href="css/themes.css">
-    <link rel="stylesheet" href="css/typography.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/profile.css">
+    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="/css/menu_dropdown.css">
+    <link rel="stylesheet" href="/css/themes.css">
+    <link rel="stylesheet" href="/css/typography.css">
     <!-- Подключение кастомных стилей -->
-    <link rel="stylesheet" href="css/custom_toggles.css">
-    <link rel="stylesheet" href="css/custom_dropdown.css">
-    <link rel="stylesheet" href="css/captcha.css">
-    <link rel="stylesheet" href="css/player.css">
-    <link rel="stylesheet" href="css/interactivehelp.css">
-    <link rel="stylesheet" href="css/pushnotify.css">
+    <link rel="stylesheet" href="/css/custom_toggles.css">
+    <link rel="stylesheet" href="/css/custom_dropdown.css">
+    <link rel="stylesheet" href="/css/captcha.css">
+    <link rel="stylesheet" href="/css/player.css">
+    <link rel="stylesheet" href="/css/interactivehelp.css">
+    <link rel="stylesheet" href="/css/pushnotify.css">
 </head>
 
 <body>
@@ -234,7 +234,7 @@
                     <input type="file" accept="image/*" id="avatar-upload" style="display: none;">
                 </div>
                 <div class="user-fullname-wrapper">
-                    <div class="user-fullname theme-text">тут надо First Name Last name одной строкой</div>
+                    <div class="user-fullname theme-text"></div>
                     <div class="tooltip-status-wrapper">
                         <img src="assets/icons/status/verified.gif" alt="Verified" class="user-status-icon" />
                         <div class="tooltip-status">
@@ -252,13 +252,12 @@
 
                 <div class="info-row">
                     <img src="assets/icons/id-badge.svg" class="info-icon theme-icon" alt="ID">
-                    <span class="label-id theme-text">ID: отображаем тут айди</span>
+                    <span class="label-id theme-text">ID:</span>
                 </div>
 
                 <div class="info-row">
                     <img src="assets/icons/user.svg" class="info-icon theme-icon" alt="Username">
-                    <span class="label-username theme-text" data-i18n="profile.usernameLabel2">Username:
-                        тут юзернейм</span>
+                    <span class="label-username theme-text" data-i18n="profile.usernameLabel2">Username:</span>
                 </div>
             </div>
 
@@ -319,15 +318,15 @@
             </div>
         </footer>
         <!-- Подключаем JS скрипты -->
-        <script src="js/menu.js"></script>
-        <script src="js/themeswitch.js"></script>
-        <script src="js/translate-language.js"></script>
-        <script src="js/captcha.js"></script>
-        <script src="js/player.js"></script>
-        <script src="js/menu_dropdown.js"></script>
-        <script src="js/download.js"></script>
-        <script src="js/pushnotify.js"></script>
-        <script src="js/profile.js"></script>
+        <script src="/js/menu.js"></script>
+        <script src="/js/themeswitch.js"></script>
+        <script src="/js/translate-language.js"></script>
+        <script src="/js/captcha.js"></script>
+        <script src="/js/player.js"></script>
+        <script src="/js/menu_dropdown.js"></script>
+        <script src="/js/download.js"></script>
+        <script src="/js/pushnotify.js"></script>
+        <script src="/js/profile.js"></script>
 </body>
 
 </html>
