Test update servers 5

--- a/profile.html
+++ b/profile.html
@@ -222,7 +222,7 @@
     </div>
 
     <!-- Заголовок "Добро пожаловать, пользователь (username)" -->
-    <h1 class="profile-heading theme-text">Welcome, тут юзернейм</h1>
+    <h1 class="profile-heading theme-text">Welcome, </h1>
 
     <div class="profile-container">
         <!-- Правая колонка блок с аватаркой -->
@@ -263,7 +263,7 @@
 
             <!-- Блок с данными пользователя -->
             <div class="data-card">
-                <div class="data-title .gray-text">You details</div>
+                <div class="data-title gray-text">You details</div>
                 <div class="data-item theme-text">
                     <img src="assets/icons/country.svg" class="data-icon theme-icon" alt="Country">
                     <span class="label-country theme-text" data-i18n="profile.countryLabel">Country:</span>страна
@@ -277,7 +277,7 @@
 
         <!-- Правая колонка: биография -->
         <div class="bio-card">
-            <div class="bio-title .gray-text">Biography</div>
+            <div class="bio-title gray-text">Biography</div>
 
             <div class="bio-editable">
                 <p class="bio-text theme-text">Your biography will be here, but you don't have to fill it out.
