Test update servers 6

--- a/profile.html
+++ b/profile.html
@@ -223,8 +223,9 @@
 
     <!-- Заголовок "Добро пожаловать, пользователь (username)" -->
     <h1 class="profile-heading theme-text">
-    Welcome, <span class="user-fullname theme-text"></span>
+        Welcome, <span class="user-username theme-text"></span>
     </h1>
+
     <div class="profile-container">
         <!-- Правая колонка блок с аватаркой -->
         <div class="left-wrapper">
@@ -251,16 +252,16 @@
 
                 <div class="divider"></div>
 
-                <!-- Отображение ID -->
+                <!-- ID -->
                 <div class="info-row">
-                <img src="assets/icons/id-badge.svg" class="info-icon theme-icon" alt="ID">
-                <span class="label-id theme-text">ID: <span class="user-id"></span></span>
+                    <img src="assets/icons/id-badge.svg" class="info-icon theme-icon" alt="ID">
+                    <span class="label-id theme-text">ID: <span class="user-id"></span></span>
                 </div>
 
-                <!-- Отображение Username -->
+                <!-- Username -->
                 <div class="info-row">
-                <img src="assets/icons/user.svg" class="info-icon theme-icon" alt="Username">
-                <span class="label-username theme-text">Username: <span class="user-username"></span></span>
+                    <img src="assets/icons/user.svg" class="info-icon theme-icon" alt="Username">
+                    <span class="label-username theme-text">Username: <span class="user-username-inline"></span></span>
                 </div>
             </div>
 
@@ -273,7 +274,8 @@
                 </div>
                 <div class="data-item theme-text">
                     <img src="assets\icons\birthday.svg" class="data-icon theme-icon" alt="Birthday">
-                    <span class="label-birthday theme-text" data-i18n="profile.birthdayLabel">Birthday:</span>дата рождения
+                    <span class="label-birthday theme-text" data-i18n="profile.birthdayLabel">Birthday:</span>дата
+                    рождения
                 </div>
             </div>
         </div>
