--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
 <body>
     <header class="header">
         <div class="logo theme-text">
-            <img src="assets/icons/logo.svg" alt="Logo" class="logo-img theme-icon">
+            <img src="/assets/icons/logo.svg" alt="Logo" class="logo-img theme-icon">
             ValeyevStudio
         </div>
         <nav class="nav">
@@ -40,10 +40,10 @@
             <div class="player has-tooltip">
                 <span class="tooltip theme-text" data-tooltip="music-volume">Music volume</span>
                 <audio id="bg-music" loop>
-                    <source src="assets/sound/startup_01.mp3" type="audio/mp3">
+                    <source src="/assets/sound/startup_01.mp3" type="audio/mp3">
                 </audio>
                 <div class="volume-control">
-                    <img id="volume-icon" src="assets/icons/player/volume.svg" alt="Volume" class="theme-icon">
+                    <img id="volume-icon" src="/assets/icons/player/volume.svg" alt="Volume" class="theme-icon">
                     <input id="volume-slider" type="range" min="0" max="100" value="100">
                 </div>
             </div>
@@ -52,66 +52,66 @@
             <div class="language-switch has-tooltip">
                 <span class="tooltip theme-text" data-tooltip="select-language">Select language</span>
                 <!-- Флаг страны и код -->
-                <img src="assets/icons/flag/usa.png" alt="Flag" class="selected-flag">
+                <img src="/assets/icons/flag/usa.png" alt="Flag" class="selected-flag">
                 <!-- Отображаем флаг по умолчанию -->
                 <span class="language-code">EN</span>
-                <img src="assets/icons/angle-small-down.svg" alt="Arrow" class="arrow theme-icon">
+                <img src="/assets/icons/angle-small-down.svg" alt="Arrow" class="arrow theme-icon">
                 <!-- Выпадающий список -->
                 <div class="dropdown-menu">
                     <div class="dropdown-item" data-lang="en-US">
-                        <img src="assets/icons/flag/usa.png" alt="USA Flag" class="flag">
+                        <img src="/assets/icons/flag/usa.png" alt="USA Flag" class="flag">
                         <span>EN</span>
                     </div>
                     <div class="dropdown-item" data-lang="ru-RU">
-                        <img src="assets/icons/flag/russia.png" alt="Russia Flag" class="flag">
+                        <img src="/assets/icons/flag/russia.png" alt="Russia Flag" class="flag">
                         <span>RU</span>
                     </div>
                     <div class="dropdown-item" data-lang="uk-UA">
-                        <img src="assets/icons/flag/ukraine.png" alt="Ukraine Flag" class="flag">
+                        <img src="/assets/icons/flag/ukraine.png" alt="Ukraine Flag" class="flag">
                         <span>UA</span>
                     </div>
                     <div class="dropdown-item" data-lang="be-BY">
-                        <img src="assets/icons/flag/belarus.png" alt="Belarus Flag" class="flag">
+                        <img src="/assets/icons/flag/belarus.png" alt="Belarus Flag" class="flag">
                         <span>BY</span>
                     </div>
                     <div class="dropdown-item" data-lang="kk-KZ">
-                        <img src="assets/icons/flag/kazakhstan.png" alt="Kazakhstan Flag" class="flag">
+                        <img src="/assets/icons/flag/kazakhstan.png" alt="Kazakhstan Flag" class="flag">
                         <span>KZ</span>
                     </div>
                     <div class="dropdown-item" data-lang="kr-TR">
-                        <img src="assets/icons/flag/crimea_tatar.png" alt="Crimean Tatar Flag" class="flag">
+                        <img src="/assets/icons/flag/crimea_tatar.png" alt="Crimean Tatar Flag" class="flag">
                         <span>TR</span>
                     </div>
                     <div class="dropdown-item" data-lang="ka-GE">
-                        <img src="assets/icons/flag/georgia.png" alt="Geogria Flag" class="flag">
+                        <img src="/assets/icons/flag/georgia.png" alt="Geogria Flag" class="flag">
                         <span>GE</span>
                     </div>
                     <div class="dropdown-item" data-lang="pl-PL">
-                        <img src="assets/icons/flag/poland.png" alt="Poland Flag" class="flag">
+                        <img src="/assets/icons/flag/poland.png" alt="Poland Flag" class="flag">
                         <span>PL</span>
                     </div>
                     <div class="dropdown-item" data-lang="de-DE">
-                        <img src="assets/icons/flag/germany.png" alt="Germany Flag" class="flag">
+                        <img src="/assets/icons/flag/germany.png" alt="Germany Flag" class="flag">
                         <span>DE</span>
                     </div>
                     <div class="dropdown-item" data-lang="es-ES">
-                        <img src="assets/icons/flag/spanish.png" alt="Spanish Flag" class="flag">
+                        <img src="/assets/icons/flag/spanish.png" alt="Spanish Flag" class="flag">
                         <span>ES</span>
                     </div>
                     <div class="dropdown-item" data-lang="fr-FR">
-                        <img src="assets/icons/flag/france.png" alt="France Flag" class="flag">
+                        <img src="/assets/icons/flag/france.png" alt="France Flag" class="flag">
                         <span>FR</span>
                     </div>
                     <div class="dropdown-item" data-lang="fi-FI">
-                        <img src="assets/icons/flag/finland.png" alt="Finland Flag" class="flag">
+                        <img src="/assets/icons/flag/finland.png" alt="Finland Flag" class="flag">
                         <span>FI</span>
                     </div>
                     <div class="dropdown-item" data-lang="ko-KR">
-                        <img src="assets/icons/flag/south_korea.png" alt="South Korea Flag" class="flag">
+                        <img src="/assets/icons/flag/south_korea.png" alt="South Korea Flag" class="flag">
                         <span>KR</span>
                     </div>
                     <div class="dropdown-item" data-lang="zh-CN">
-                        <img src="assets/icons/flag/china.png" alt="China Flag" class="flag">
+                        <img src="/assets/icons/flag/china.png" alt="China Flag" class="flag">
                         <span>CN</span>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
             <!-- Кнопка входа (Sign In) -->
             <div class="has-tooltip">
                 <button class="signin-btn" style="display: none;">
-                    <img class="signin-icon" src="assets/icons/user.svg" alt="User Icon">
+                    <img class="signin-icon" src="/assets/icons/user.svg" alt="User Icon">
                     <span class="signin-text">Sign In</span>
                 </button>
                 <span class="tooltip theme-text" data-tooltip="sign-in">Sign in to your account</span>
@@ -137,25 +137,25 @@
             <!-- Аватар с выпадающим меню -->
             <div class="user-menu">
                 <div class="user-avatar" id="avatarToggle">
-                    <img src="assets/images/avatar/user.png" alt="User Avatar" class="avatar-img theme-icon">
-                    <img src="assets/icons/angle-small-down.svg" alt="Dropdown Icon" class="dropdown-icon theme-icon">
+                    <img src="/assets/images/avatar/user.png" alt="User Avatar" class="avatar-img theme-icon">
+                    <img src="/assets/icons/angle-small-down.svg" alt="Dropdown Icon" class="dropdown-icon theme-icon">
                 </div>
 
                 <div class="dropdown-panel" id="userDropdown">
                     <div class="dropdown-item" id="menuProfile">
-                        <img src="assets/icons/user.svg" class="item-icon theme-icon" alt="">
+                        <img src="/assets/icons/user.svg" class="item-icon theme-icon" alt="">
                         <span class="menu-profile-text theme-text">My profile</span>
                     </div>
                     <div class="dropdown-item" id="menuSettings">
-                        <img src="assets/icons/settings.svg" class="item-icon theme-icon" alt="">
+                        <img src="/assets/icons/settings.svg" class="item-icon theme-icon" alt="">
                         <span class="menu-settings-text theme-text">Settings</span>
                     </div>
                     <div class="dropdown-item" id="menuSupport">
-                        <img src="assets/icons/help.svg" class="item-icon theme-icon" alt="">
+                        <img src="/assets/icons/help.svg" class="item-icon theme-icon" alt="">
                         <span class="menu-support-text theme-text">Support</span>
                     </div>
                     <div class="dropdown-item" id="menuLogout">
-                        <img src="assets/icons/user-logout.svg" class="item-icon theme-icon" alt="">
+                        <img src="/assets/icons/user-logout.svg" class="item-icon theme-icon" alt="">
                         <span class="menu-logout-text theme-text">Logout</span>
                     </div>
                 </div>
@@ -167,12 +167,12 @@
     <div class="overlay"></div>
     <div class="dropdown-menu-item" id="productsMenu">
         <div class="product-item">
-            <img src="assets/images/PixelFPS.png" alt="Product 1">
+            <img src="/assets/images/PixelFPS.png" alt="Product 1">
             <p class="theme-text">PixelFPS</p>
             <div class="has-tooltip">
                 <button id="downloadBtn" class="download-btn">
                     <span class="button-text">Download</span> <!-- Текст кнопки -->
-                    <img class="download-icon theme-icon" src="assets/icons/download.svg" alt="Download Icon" />
+                    <img class="download-icon theme-icon" src="/assets/icons/download.svg" alt="Download Icon" />
                     <!-- Иконка -->
                 </button>
                 <span class="tooltip theme-text" data-tooltip="download-description">Download the latest version</span>
@@ -184,7 +184,7 @@
     <div id="captchaModal" class="captcha-modal" style="display: none;">
         <div class="captcha-content">
             <!-- Иконка в центре -->
-            <img src="assets/icons/robot.png" alt="Icon" class="captcha-icon">
+            <img src="/assets/icons/robot.png" alt="Icon" class="captcha-icon">
             <!-- Заголовок -->
             <p class="captcha-title theme-text">Confirm that you are not a robot</p>
             <!-- Чекбокс с текстом -->
@@ -231,14 +231,14 @@
         <div class="left-wrapper">
             <div class="avatar-card">
                 <div class="avatar-wrapper">
-                    <img src="assets/images/avatar/test.jpg" alt="User Avatar" class="profile-avatar">
-                    <img src="assets/icons/add-image.svg" alt="Edit avatar" class="edit-avatar theme-icon">
+                    <img src="/assets/images/avatar/test.jpg" alt="User Avatar" class="profile-avatar">
+                    <img src="/assets/icons/add-image.svg" alt="Edit avatar" class="edit-avatar theme-icon">
                     <input type="file" accept="image/*" id="avatar-upload" style="display: none;">
                 </div>
                 <div class="user-fullname-wrapper">
                     <div class="user-fullname theme-text"></div>
                     <div class="tooltip-status-wrapper">
-                        <img src="assets/icons/status/verified.gif" alt="Verified" class="user-status-icon" />
+                        <img src="/assets/icons/status/verified.gif" alt="Verified" class="user-status-icon" />
                         <div class="tooltip-status">
                             <div class="tooltip-status-title">Верифицированная страница</div>
                             <div class="tooltip-status-text theme-text">
@@ -254,13 +254,13 @@
 
                 <!-- ID -->
                 <div class="info-row">
-                    <img src="assets/icons/id-badge.svg" class="info-icon theme-icon" alt="ID">
+                    <img src="/assets/icons/id-badge.svg" class="info-icon theme-icon" alt="ID">
                     <span class="label-id theme-text">ID: <span class="user-id"></span></span>
                 </div>
 
                 <!-- Username -->
                 <div class="info-row">
-                    <img src="assets/icons/user.svg" class="info-icon theme-icon" alt="Username">
+                    <img src="/assets/icons/user.svg" class="info-icon theme-icon" alt="Username">
                     <span class="label-username theme-text">Username: <span class="user-username-inline"></span></span>
                 </div>
             </div>
@@ -309,16 +309,16 @@
             <div class="footer-social">
                 <span class="social-platforms">Social:</span>
                 <a href="https://vk.com/nikitavaleyev" target="_blank">
-                    <img src="assets/icons/social/vk.svg" alt="VK" class="theme-icon">
+                    <img src="/assets/icons/social/vk.svg" alt="VK" class="theme-icon">
                 </a>
                 <a href="https://www.youtube.com/channel/@NikitaValeyev" target="_blank">
-                    <img src="assets/icons/social/youtube.svg" alt="YouTube" class="theme-icon">
+                    <img src="/assets/icons/social/youtube.svg" alt="YouTube" class="theme-icon">
                 </a>
                 <a href="https://t.me/nikitavaleyev_musician" target="_blank">
-                    <img src="assets/icons/social/telegram.svg" alt="Telegram" class="theme-icon">
+                    <img src="/assets/icons/social/telegram.svg" alt="Telegram" class="theme-icon">
                 </a>
                 <a href="https://instagram.com/nikitavaleyev" target="_blank">
-                    <img src="assets/icons/social/instagram.svg" alt="Instagram" class="theme-icon">
+                    <img src="/assets/icons/social/instagram.svg" alt="Instagram" class="theme-icon">
                 </a>
             </div>
         </footer>
