Test update servers 7

--- a/profile.html
+++ b/profile.html
@@ -29,9 +29,9 @@
         </div>
         <nav class="nav">
             <ul>
-                <li><a href="home.html" class="nav-home">Home</a></li>
-                <li><a href="products.html" class="nav-our-products">Our Products</a></li>
-                <li><a href="about.html" class="nav-about-us">About us</a></li>
+                <li><a href="/home.html" class="nav-home">Home</a></li>
+                <li><a href="/products.html" class="nav-our-products">Our Products</a></li>
+                <li><a href="/about.html" class="nav-about-us">About us</a></li>
             </ul>
         </nav>
         <div class="actions">
@@ -269,11 +269,11 @@
             <div class="data-card">
                 <div class="data-title gray-text">You details</div>
                 <div class="data-item theme-text">
-                    <img src="assets/icons/country.svg" class="data-icon theme-icon" alt="Country">
+                    <img src="/assets/icons/country.svg" class="data-icon theme-icon" alt="Country">
                     <span class="label-country theme-text" data-i18n="profile.countryLabel">Country:</span>страна
                 </div>
                 <div class="data-item theme-text">
-                    <img src="assets\icons\birthday.svg" class="data-icon theme-icon" alt="Birthday">
+                    <img src="/assets\icons\birthday.svg" class="data-icon theme-icon" alt="Birthday">
                     <span class="label-birthday theme-text" data-i18n="profile.birthdayLabel">Birthday:</span>дата
                     рождения
                 </div>
