Test update servers 7

--- a/home.html
+++ b/home.html
@@ -128,7 +128,7 @@
 
             <!-- Кнопка входа (Sign In) -->
             <div class="has-tooltip">
-                <button class="signin-btn">
+                <button class="signin-btn" style="display: inline-block;">
                     <img class="signin-icon" src="assets/icons/user.svg" alt="User Icon">
                     Sign In
                 </button>
