--- a/profile.html
+++ b/profile.html
@@ -127,7 +127,7 @@
 
             <!-- Кнопка входа (Sign In) -->
             <div class="has-tooltip">
-                <button class="signin-btn" style="display: none;">
+                <button class="signin-btn" style="display: inline-block;">
                     <img class="signin-icon" src="/assets/icons/user.svg" alt="User Icon">
                     <span class="signin-text">Sign In</span>
                 </button>
@@ -135,7 +135,7 @@
             </div>
 
             <!-- Аватар с выпадающим меню -->
-            <div class="user-menu">
+            <div class="user-menu" style="display: none;">
                 <div class="user-avatar" id="avatarToggle">
                     <img src="/assets/images/avatar/user.png" alt="User Avatar" class="avatar-img theme-icon">
                     <img src="/assets/icons/angle-small-down.svg" alt="Dropdown Icon" class="dropdown-icon theme-icon">
