--- a/profile.html
+++ b/profile.html
@@ -230,7 +230,7 @@
         <div class="left-wrapper">
             <div class="avatar-card">
                 <div class="avatar-wrapper">
-                    <img src="/assets/images/avatar/test.jpg" alt="User Avatar" class="profile-avatar">
+                    <img src="/assets/images/avatar/default.png" alt="User Avatar" class="profile-avatar">
                     <img src="/assets/icons/add-image.svg" alt="Edit avatar" class="edit-avatar theme-icon">
                     <input type="file" accept="image/*" id="avatar-upload" style="display: none;">
                 </div>
@@ -287,12 +287,12 @@
                 <p class="bio-text theme-text">Your biography will be here, but you don't have to fill it out.
                     Everything is according to your choice — it's up to you to decide.,
                     what your profile will look like.
-                    <img src="assets/icons/pencil.svg" alt="Edit" class="bio-edit-icon theme-icon" />
+                    <img src="/assets/icons/pencil.svg" alt="Edit" class="bio-edit-icon theme-icon" />
                 </p>
 
                 <div class="bio-edit-container">
                     <textarea class="bio-input theme-text"></textarea>
-                    <img src="assets/icons/save.svg" alt="Save" class="bio-save-icon theme-icon" />
+                    <img src="/assets/icons/save.svg" alt="Save" class="bio-save-icon theme-icon" />
                     <div class="bio-char-count theme-text">0/500</div>
                 </div>
 
