Test update servers 13

--- a/profile.html
+++ b/profile.html
@@ -221,7 +221,7 @@
     </div>
 
     <!-- Заголовок "Добро пожаловать, пользователь (username)" -->
-    <h1 class="profile-heading theme-text">
+    <h1 class="profile-heading theme-text" id="welcomeHeading" style="display: none;">
         Welcome, <span class="user-username theme-text"></span>
     </h1>
 
