beta test update 1

--- a/profile.html
+++ b/profile.html
@@ -299,11 +299,10 @@
                 <div class="bio-hint red-text">The biography should be no more than 500 characters long!</div>
             </div>
         </div>
-
         <footer class="footer line">
             <div class="footer-content">
                 <span class="footer-copyright">© 2025 Project of the ValeyevPrograms company.</span>
-                <a href="about.html#user-agreement" class="footer-link nav-user-agreement">User Agreement</a>
+                <a href="/about.html#user-agreement" class="footer-link nav-user-agreement">User Agreement</a>
             </div>
             <div class="footer-social">
                 <span class="social-platforms">Social:</span>
