beta global verification update

--- a/profile.html
+++ b/profile.html
@@ -244,6 +244,7 @@
                             <div class="tooltip-status-arrow"></div>
                         </div>
                     </div>
+                    </div>
                 </div>
             </div>
 
