Update profile system

--- a/auth.html
+++ b/auth.html
@@ -49,7 +49,7 @@
         </p>
       </form>
     </div>
-    
+
     <!-- Форма регистрации -->
     <div class="registration-container" style="display:none;">
       <form class="registration-form" id="registrationForm">
@@ -88,7 +88,8 @@
         <div class="password-error" style="display:none;"></div>
 
         <!-- Подсказка -->
-        <div class="password-hint theme-text"> The password must contain at least 6 characters and special characters (! “ # $ % ‘
+        <div class="password-hint theme-text"> The password must contain at least 6 characters and special characters (!
+          “ # $ % ‘
           ()
           *)
         </div>
@@ -101,9 +102,8 @@
     </div>
   </div>
 
-  <!-- Затемняющий фон -->
-  <div class="modal-overlay"></div>
   <!-- Модальное окно: Восстановления пароля -->
+  <div class="modal-overlay"></div>
   <div class="modal-forgot-password">
     <div class="modal-content">
       <h2 class="ForgotPasswordTitle theme-text">Forgot Password</h2>
@@ -114,12 +114,14 @@
 
       <div class="input-wrapper">
         <img src="assets/icons/mail.svg" alt="Mail" class="input-icon2 theme-icon">
-        <input type="email" id="forgot-email" placeholder="Email address" data-placeholder="forgot-email" class="input-email-reset">
+        <input type="email" id="forgot-email" placeholder="Email address" data-placeholder="forgot-email"
+          class="input-email-reset">
         <div class="input-underline"></div>
       </div>
 
       <div class="input-email-error" style="display: none;">Invalid email address</div>
-      <div class="input-forgotpassword-success theme-text" style="display: none;">If a user account exists with the entered email, we will send an
+      <div class="input-forgotpassword-success theme-text" style="display: none;">If a user account exists with the
+        entered email, we will send an
         email with further instructions to reset the password.</div>
 
       <div class="modal-actions">
