Update reset password + token

--- a/auth.html
+++ b/auth.html
@@ -8,9 +8,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/typography.css">
+  <link rel="stylesheet" href="css/themes.css" />
   <link rel="stylesheet" href="css/auth.css" />
   <link rel="stylesheet" href="css/forgotpassword.css" />
-  <link rel="stylesheet" href="css/themes.css" />
+  <!-- Подключение кастомных стилей -->
+  <link rel="stylesheet" href="css/modal_message.css"/>
 </head>
 
 <body>
