--- a/reset-password.html
+++ b/reset-password.html
@@ -9,8 +9,12 @@
   <link rel="stylesheet" href="css/typography.css">
   <link rel="stylesheet" href="css/reset-password.css">
   <link rel="stylesheet" href="css/themes.css" />
+    <!-- Подключение кастомных стилей -->
+  <link rel="stylesheet" href="css/modal_message.css"/>
 </head>
+
 <body>
+
   <div class="reset-container">
     <h2 class="resetpassword-title theme-text">Reset password</h2>
     <form class="reset-form">
