Update user profile

--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ValeyevStudio - About</title>
+    <title>ValeyevStudio - Profile</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/profile.css">
@@ -141,6 +141,15 @@
                     <img src="/assets/icons/angle-small-down.svg" alt="Dropdown Icon" class="dropdown-icon theme-icon">
                 </div>
                 <div class="dropdown-panel" id="userDropdown">
+                    <!-- Блок Баланса -->
+                    <div class="dropdown-balance">
+                        <div class="dropdown-item balance-item" id="userBalance">
+                            <img src="assets/icons/balance.svg" class="item-icon theme-icon" alt="">
+                            <span class="menu-balance-text theme-text">Balance:</span>
+                            <span class="balance-amount" id="balanceAmount">0</span>
+                        </div>
+                        <div class="balance-divider"></div>
+                    </div>
                     <div class="dropdown-item" id="menuProfile">
                         <img src="/assets/icons/user.svg" class="item-icon theme-icon" alt="">
                         <span class="menu-profile-text theme-text">My profile</span>
