Update balance format

--- a/profile.html
+++ b/profile.html
@@ -140,14 +140,13 @@
                     <img src="/assets/images/avatar/user.png" alt="User Avatar" class="avatar-img theme-icon">
                     <img src="/assets/icons/angle-small-down.svg" alt="Dropdown Icon" class="dropdown-icon theme-icon">
                 </div>
-                
+
                 <div class="dropdown-panel" id="userDropdown">
                     <!-- Блок Баланса -->
                     <div class="dropdown-balance">
                         <div class="dropdown-item balance-item" id="userBalance">
-                            <img src="/assets/icons/balance.svg" class="item-icon theme-icon" alt="">
-                            <span class="menu-balance-text theme-text">Balance:</span>
-                            <span class="balance-amount" id="balanceAmount">0</span>
+                            <img src="/assets/icons/purse.gif" class="item-icon theme-icon" alt="">
+                            <span class="balance-amount theme-text" id="balanceAmount">0</span>
                         </div>
                         <div class="balance-divider"></div>
                     </div>
