Update balance format

--- a/home.html
+++ b/home.html
@@ -146,7 +146,7 @@
                     <!-- Блок Баланса -->
                     <div class="dropdown-balance">
                         <div class="dropdown-item balance-item" id="userBalance">
-                            <img src="/assets/icons/purse.gif" class="item-icon theme-icon" alt="">
+                            <img src="/assets/icons/piggy-bank.svg" class="item-icon theme-icon" alt="">
                             <span class="menu-balance-text theme-text">Balance:</span>
                             <span class="balance-amount" id="balanceAmount">0</span>
                         </div>
