Update balance format

--- a/profile.html
+++ b/profile.html
@@ -145,7 +145,7 @@
                     <!-- Блок Баланса -->
                     <div class="dropdown-balance">
                         <div class="dropdown-item balance-item" id="userBalance">
-                            <img src="/assets/icons/piggy-bank.svg" class="balance-item-icon theme-icon" alt="">
+                            <img src="/assets/icons/wallet.svg" class="balance-item-icon theme-icon" alt="">
                             <span class="balance-amount theme-text" id="balanceAmount">0</span>
                         </div>
                         <div class="balance-divider"></div>
