--- a/profile.html
+++ b/profile.html
@@ -275,12 +275,13 @@
                 <div class="data-title gray-text">You details</div>
                 <div class="data-item theme-text">
                     <img src="/assets/icons/country.svg" class="data-icon theme-icon" alt="Country">
-                    <span class="label-country theme-text" data-i18n="profile.countryLabel">Country:</span>страна
+                    <span class="label-country theme-text" data-i18n="profile.countryLabel">Country:</span>
+                    <span class="user-country">страна</span>
                 </div>
                 <div class="data-item theme-text">
-                    <img src="/assets\icons\birthday.svg" class="data-icon theme-icon" alt="Birthday">
-                    <span class="label-birthday theme-text" data-i18n="profile.birthdayLabel">Birthday:</span>дата
-                    рождения
+                    <img src="/assets/icons/birthday.svg" class="data-icon theme-icon" alt="Birthday">
+                    <span class="label-birthday theme-text" data-i18n="profile.birthdayLabel">Birthday:</span>
+                    <span class="user-birthday">дата рождения</span>
                 </div>
             </div>
         </div>
