Global Settings Update + Profile page

--- a/settings.html
+++ b/settings.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="css/typography.css">
   <link rel="stylesheet" href="css/themes.css">
   <link rel="stylesheet" href="css/settings.css">
+  <!-- Подключение кастомных стилей -->
+  <link rel="stylesheet" href="css/modal_message.css">
 </head>
 <body>
 
