--- a/profile.html
+++ b/profile.html
@@ -239,7 +239,7 @@
         <div class="left-wrapper">
             <div class="avatar-card">
                 <div class="avatar-wrapper">
-                    <img src="/assets/images/avatar/default.png" alt="User Avatar" class="profile-avatar">
+                    <img src="https://res.cloudinary.com/dqceexk1h/image/upload/v1750689301/default.png" alt="User Avatar" class="profile-avatar profile-avatar-img">
                     <img src="/assets/icons/add-image.svg" alt="Edit avatar" class="edit-avatar theme-icon">
                     <input type="file" accept="image/*" id="avatar-upload" style="display: none;">
                 </div>
