Update profile fix

--- a/profile.html
+++ b/profile.html
@@ -276,12 +276,12 @@
                 <div class="data-item theme-text">
                     <img src="/assets/icons/country.svg" class="data-icon theme-icon" alt="Country">
                     <span class="label-country theme-text" data-i18n="profile.countryLabel">Country:</span>
-                    <span class="user-country">страна</span>
+                    <span class="user-country"></span>
                 </div>
                 <div class="data-item theme-text">
                     <img src="/assets/icons/birthday.svg" class="data-icon theme-icon" alt="Birthday">
                     <span class="label-birthday theme-text" data-i18n="profile.birthdayLabel">Birthday:</span>
-                    <span class="user-birthday">дата рождения</span>
+                    <span class="user-birthday"></span>
                 </div>
             </div>
         </div>
