--- a/home.html
+++ b/home.html
@@ -138,7 +138,7 @@
             <!-- Аватар с выпадающим меню -->
             <div class="user-menu" style="display: none;">
                 <div class="user-avatar" id="avatarToggle">
-                    <img src="assets/images/avatar/user.png" alt="User Avatar" class="avatar-img theme-icon">
+                    <img src="assets/icons/user.png" alt="User Avatar" class="avatar-img theme-icon">
                     <img src="assets/icons/angle-small-down.svg" alt="Dropdown Icon" class="dropdown-icon theme-icon">
                 </div>
 
