--- a/about.html
+++ b/about.html
@@ -376,7 +376,7 @@
 
     <footer class="footer line">
         <div class="footer-content">
-            <span class="footer-copyright">© 2025 Project of the ValeyevPrograms company.</span>
+            <span class="footer-copyright">© 2025 Project of the ValeyevStudio company.</span>
             <a href="about.html#user-agreement" class="footer-link nav-user-agreement">User Agreement</a>
         </div>
         <div class="footer-social">
