--- a/auth.html
+++ b/auth.html
@@ -137,7 +137,7 @@
   <!-- Нижний копирайтер -->
   <footer class="footer line">
     <div class="footer-content">
-      <span class="footer-copyright">© 2025 Project of the ValeyevPrograms company.</span>
+      <span class="footer-copyright">© 2025 Project of the ValeyevStudio company.</span>
       <a href="about.html#user-agreement" class="footer-link nav-user-agreement">User Agreement</a>
     </div>
     <div class="footer-social">
